# scrapers

./: Cargo.toml  flake.nix  test_config.yaml
.github/workflows/: ci.yml  update_inputs.yml
src/: config.rs  main.rs
src/snapshots/: scrapers__config__tests__parse_example.snap
